Update style.css, trying to fix spacing again

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ h1 {
     text-align: center;
     font-size: 100px;
     position: relative;
+    margin-top: 60px;
     top: 60px;
     font-weight: normal;
 }
